remove GC log from the clients
Signed-off-by: Lukas Kral <lukywill16@gmail.com>